<resources>
    <string name="app_name">hidiet</string>
    <string name="texto_interno">Area interna de la app</string>
    <string name="Descripcion"><b>Descripción de la aplicación:</b>\n\nHiDiet es una aplicación diseñada para ayudar a los usuarios a alcanzar sus metas de salud y bienestar a través de la implementación de una dieta balanceada y personalizada. Esta aplicación se centra en proporcionar a los usuarios herramientas efectivas para controlar su alimentación y recibir consejos personalizados que se ajusten a sus objetivos individuales.</string>
    <string name="Desarrolladores"><b>Desarrolladores:</b>\n\nCortez Gutierrez, Kevin Antonio \nGarcía Hernández, Eduardo Ernesto \nVentura Hernández, Gilberto Alexander \nVides Deras, Miguel Angel</string>
    <string name="Contacto"><b>Contacto:</b>\n\nkevin.cortez@catolica.edu.sv \neduardo.garcia1@catolica.edu.sv \ngilberto.ventura@catolica.edu.sv \nmiguel.vides@catolica.edu.sv</string>
    <string name="Version"><b>Versión de la app:</b>\n\nVersión 1.0</string>
    <string name="Informacion">Información</string>
    <string name="Nombre">Ingrese un nombre y apellido:</string>
    <string name="Peso">¿Cuál es tu peso actual en Kg?</string>
    <string name="Estatura">Ingresa tu estatura en metros:</string>
    <string name="Sexo">Sexo:</string>
    <string name="Objetivos">¿Cuales son tus objetivos?</string>
    <string name="rbHombre">Hombre</string>
    <string name="rbIndeciso">Prefiero no decirlo</string>
    <string name="rbMujer">Mujer</string>
    <string name="rbBajarPeso">Bajar de peso</string>
    <string name="rbDietaBalanceada">Dieta Balanceada</string>
    <string name="rbAlcanzarPeso">Alcanzar peso ideal</string>
    <string name="rbOtro">Otro</string>
    <string name="etOtroObjetivo">Ingrese otro objetivo:</string>
    <string name="btnContinuar">Continuar</string>
    <string name="dieta_balanceada">Dieta balanceada</string>
    <string name="lograr_peso_ideal">Lograr peso ideal</string>
    <string name="peso_actual">Peso actual:</string>
    <string name="ingrese_km_recorridos">Ingrese km recorridos:</string>
    <string name="ingrese_calor_as_quemadas">Ingrese calorías quemadas:</string>
    <string name="calor_as_quemadas">Calorías quemadas</string>
    <string name="km_recorridos">Km recorridos</string>
    <string name="estad_sticas">Estadísticas:</string>
    <string name="duraci_n_del_ejercicio">Duración del ejercicio:</string>
    <string name="ingrese_peso_actual">Ingrese peso actual:</string>
    <string name="ingrese_duraci_n_del_ejercicio">Ingrese duración del ejercicio:</string>
    <string name="objetivos">Objetivos:</string>
    <string name="bajar_peso">Bajar peso</string>
    <string name="username">Usuario:</string>
    <string name="password">Contraseña:</string>
    <string name="bienvenido">Bienvenido a HiDiet</string>
    <string name="ingresar">Ingresar</string>
    <string name="registrate">Registrate:</string>
    <string name="registrarse">Registrarse</string>
    <string name="correo_electr_nico">Correo electrónico:</string>
    <string name="ingrese_una_contrase_a">Ingrese una contraseña:</string>
    <string name="citas_motivadoras">Citas Motivadoras</string>
    <string name="cita1">No se trata de negarte cosas, se trata de priorizar tu salud.</string>
    <string name="cita2">No busques excusas, busca resultados. Tu cuerpo te lo agradecerá.</string>
    <string name="cita3">Cuida tu cuerpo, es el único lugar que tienes para vivir.</string>
    <string name="consejo">Consejos</string>
    <string name="consejo1">Variedad de alimentos: Consume una variedad de alimentos para asegurarte de obtener todos los nutrientes esenciales.</string>
    <string name="consejo2">Controla las porciones: No solo importa lo que comes, sino también cuánto comes. Controlar las porciones puede ayudar a mantener un equilibrio calórico adecuado.</string>
    <string name="consejo3"><![CDATA[Hidratación: Bebe suficiente agua a lo largo del día. A veces, la sed se confunde con el hambre.]]></string>
    <string name="user">Juan Flores</string>
    <string name="correo_electronico">Correo electrónico:</string>
    <string name="sexo">Sexo:</string>
    <string name="peso">Peso:</string>
    <string name="altura">Altura:</string>
    <string name="btn_editar_perfil">Editar Perfil</string>
    <string name="desayuno">Desayuno</string>
    <string name="almuerzo">Almuerzo</string>
    <string name="cena">Cena</string>
    <string name="btn_actualizar">Actualizar</string>
    <string name="usuario">Usuario:</string>
    <string name="correo_electronico_perfil">Correo electrónico:</string>
    <string name="sexo_perfil">Sexo:</string>
    <string name="peso_perfil">Peso:</string>
    <string name="altura_perfil">Altura:</string>
    <string name="descrip_activ">HiDiet es como un refugio virtual de inspiración y empoderamiento, uniendo consejos, citas motivadoras y estadísticas fundamentales para guiar a los usuarios hacia un estilo de vida saludable a través de una dieta equilibrada.</string>
    <string name="consejos">Consejos</string>
    <string name="consejos_info">En nuestra sección de consejos de dieta, te invitamos a descubrir el poder de tomar decisiones alimenticias conscientes.</string>
    <string name="btn_ver_mas">Ver más</string>
    <string name="citas_motivadoras_acti">Citas Motivadoras</string>
    <string name="info_citas">Aquí, encontrarás palabras que alimentan tanto el alma como el cuerpo, recordándote que cada elección alimentaria es un paso hacia tu bienestar.</string>
    <string name="btn_ver_mas_citas">Ver más</string>
    <string name="estadisticas_act">Estadistícas</string>
    <string name="info_estadisticas_act">Tu dedicación está dando frutos en Hidiet. Aquí tienes un vistazo rápido a tu progreso.</string>
    <string name="mantener_sesi_n">Mantener sesión</string>
    <string name="registrarme">Registrarme</string>
</resources>