<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#94DE3C"
    android:orientation="vertical"
    tools:context=".Perfil1">

    <TextView
        android:id="@+id/tvInfo1"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/Informacion"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:padding="10dp"/>

    <View
        android:id="@+id/divider5"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="?android:attr/listDivider" />

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/Nombre"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"/>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <EditText
        android:id="@+id/etPeso"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/Peso"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"/>

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <EditText
        android:id="@+id/etEstatura"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/Estatura"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"/>

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:id="@+id/tvSexo"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:gravity="center_vertical"
            android:textStyle="bold"
            android:text="@string/Sexo" />

        <RadioButton
            android:id="@+id/rbMasculino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rbHombre" />

        <RadioButton
            android:id="@+id/rbFemenino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rbMujer" />

        <RadioButton
            android:id="@+id/rbIndeciso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rbIndeciso" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvObjetivos"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/Objetivos"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:padding="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <RadioButton
            android:id="@+id/radioButton5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rbBajarPeso" />

        <RadioButton
            android:id="@+id/radioButton6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rbDietaBalanceada" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <RadioButton
            android:id="@+id/radioButton7"
            android:layout_width="37dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rbAlcanzarPeso" />

        <RadioButton
            android:id="@+id/radioButton8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rbOtro" />
    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/etOtroObjetivo"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        />

    <View
        android:id="@+id/divider4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <Button
        style="@style/TextAppearance.AppCompat.Button"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="20dp"
        android:onClick="Finalizar"
        android:text="@string/btnContinuar" />

</LinearLayout>