<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#7FE93C"
    tools:context=".ProgresoMenu">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvEstadisticas"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textStyle="bold"
            android:text="@string/estad_sticas"
            android:gravity="center_horizontal"/>

        <View
            android:id="@+id/divider6"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/km_recorridos" />

            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/calor_as_quemadas" />
        </LinearLayout>

        <LinearLayout
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/etKmRecorridos"
                android:layout_width="130dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text"
                android:textSize="14sp"
                android:hint="@string/ingrese_km_recorridos"/>

            <EditText
                android:id="@+id/etCaloriasQuemadas"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text"
                android:textSize="14sp"
                android:hint="@string/ingrese_calor_as_quemadas" />
        </LinearLayout>

        <View
            android:id="@+id/divider7"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkBox4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/peso_actual" />

            <CheckBox
                android:id="@+id/checkBox3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/duraci_n_del_ejercicio" />

        </LinearLayout>

        <LinearLayout
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextText2"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text"
                android:textSize="14sp"
                android:hint="@string/ingrese_peso_actual" />

            <EditText
                android:id="@+id/editTextText"
                android:layout_width="230dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text"
                android:textSize="14sp"
                android:hint="@string/ingrese_duraci_n_del_ejercicio"/>

        </LinearLayout>

        <View
            android:id="@+id/divider8"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/tvObjetivos"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textStyle="bold"
            android:text="@string/objetivos"
            android:gravity="center_horizontal"/>

        <View
            android:id="@+id/divider9"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_BajarPeso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/bajar_peso" />

            <RadioButton
                android:id="@+id/rbAlcanzarPeso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lograr_peso_ideal" />

            <RadioButton
                android:id="@+id/rbDietaBalanceada"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dieta_balanceada" />
        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/bottom_background"
        android:elevation="2dp"
        app:itemIconSize="30dp"
        app:itemIconTint="@drawable/item_selector"
        app:itemRippleColor="@android:color/transparent"
        app:labelVisibilityMode="unlabeled"
        app:menu="@menu/bottom_menu" />

</RelativeLayout>