<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#94DE3C"
    android:orientation="vertical"
    android:padding="40dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvBienvenido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bienvenido"
        android:gravity="center_horizontal"
        android:textSize="30sp"/>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        app:srcCompat="@drawable/logo" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:helperText="* required"
        app:startIconDrawable="@drawable/ic_people">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:helperText="* required"
        app:startIconDrawable="@android:drawable/ic_lock_idle_lock"
        app:endIconMode="password_toggle"
        app:counterEnabled="true"
        app:counterMaxLength="8"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiPasw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:backgroundTint="@null"
        android:onClick="VerificarDatos"
        android:text="@string/ingresar"/>
</LinearLayout>