<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="#7FE93C"
    tools:context=".AcercaMenu">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvDescripcion"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:justificationMode="inter_word"
            android:padding="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/Descripcion"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tvDesarrolladores"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/Desarrolladores"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tvContacto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/Contacto"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tvVersion"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:padding="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/Version"
            android:textSize="15sp" />
    </LinearLayout>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/bottom_background"
        android:elevation="2dp"
        app:itemIconSize="30dp"
        app:itemIconTint="@drawable/item_selector"
        app:itemRippleColor="@android:color/transparent"
        app:labelVisibilityMode="unlabeled"
        app:menu="@menu/bottom_menu" />

</RelativeLayout>